--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@thingue/lib-pixelstreamingfrontend": "^0.0.2",
-    "@thingue/lib-pixelstreamingfrontend-ui": "^0.0.1",
+    "@epicgames-ps/lib-pixelstreamingfrontend-ue5.3": "^0.0.3",
+    "@epicgames-ps/lib-pixelstreamingfrontend-ui-ue5.3": "^0.0.4",
+    "@epicgames-ps/lib-pixelstreamingfrontend-ue5.4": "^0.0.1",
+    "@epicgames-ps/lib-pixelstreamingfrontend-ui-ue5.4": "^0.0.1",
     "uuid": "^9.0.1",
     "vue": "^3.3.4"
   },
